(coq.theory
 (name Rango)                      ; This will determine the top-level Coq
                                   ; module of your theory, modules will
                                   ; be MyPlugin.A, etc., when seen from the
                                   ; outside.

 (package coq-rango)               ; Adding this line will make your
                                   ; library installable in the opam package

 (libraries coq-rango.plugin)      ; Here you should declare all
                                   ; OCaml plugin dependencies
                                   ; for your Coq files.

; Other important fields are `modules` and `flags`, see Dune
; documentation for more details.

)
